Modified API dto for error response and internal server error
